<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.humberto.concursoengine.ActivityLogin"
    android:weightSum="1"
    android:focusableInTouchMode="true">
    <!--android:background="@color/colorPrimaryLight"-->


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:text="Escolha uma opção de login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center_vertical|center_horizontal"
        android:fontFamily="sans-serif" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="0.44"
                android:layout_height="30dp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="151dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:text="@string/ou"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/textView10"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="151dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/entrar"
                android:textStyle="bold"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_weight="0.44"
                android:layout_height="30dp"
                android:gravity="center_vertical">

                <View
                    android:layout_width="151dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:text="@string/ou"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center_horizontal"
                    tools:ignore="NestedWeights" />

                <View
                    android:layout_width="151dp"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

            </LinearLayout>

            <TextView
                android:text="@string/nenhuma_conta_ainda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                tools:ignore="NestedWeights"
                android:layout_marginTop="10dp" />

            <Button
                android:text="@string/registrar_se"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/button3"
                style="@android:style/Widget.Holo.Button"
                android:onClick="registrarsescreen" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
